# zero2prod

./: .env.example  Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: general.yaml
.sqlx/: query-b04bf067a248b1042d96cd0129f371f9c290e84345f0718a60d990275b604b21.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260402142944_create_emails_log_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
