[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Daniel Pereira Lima <limadanielpereira@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.13.2"

[dependencies]
actix-web = "4.13.0"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.15.22"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4.15", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

